fix: fix scss constrast -> contrast and add gradient color

--- a/packages/theme/src/abstracts/_variables.scss
+++ b/packages/theme/src/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $disabled-color: #bdc3c7;
 $warning-color: #e67e22;
 $danger-color: #e74c3c;
 
+$default-contrast-color: #ffffff;
 $primary-contrast-color: #ffffff;
 $secondary-contrast-color: #ffffff;
 $success-contrast-color: #ffffff;
