--- a/packages/theme/src/base/_base.scss
+++ b/packages/theme/src/base/_base.scss
@@ -1,17 +1,25 @@
 :root {
   --default-color: #{$default-color};
   --primary-color: #{$primary-color};
-  --primary-constrast-color: #{$primary-contrast-color};
   --secondary-color: #{$secondary-color};
-  --secondary-constrast-color: #{$secondary-contrast-color};
   --success-color: #{$success-color};
-  --success-constrast-color: #{$success-contrast-color};
   --info-color: #{$info-color};
-  --info-constrast-color: #{$info-contrast-color};
   --warning-color: #{$warning-color};
-  --warning-constrast-color: #{$warning-contrast-color};
   --danger-color: #{$danger-color};
-  --danger-constrast-color: #{$danger-contrast-color};
+
+  --default-contrast-color: #{$default-contrast-color};
+  --primary-contrast-color: #{$primary-contrast-color};
+  --secondary-contrast-color: #{$secondary-contrast-color};
+  --success-contrast-color: #{$success-contrast-color};
+  --info-contrast-color: #{$info-contrast-color};
+  --warning-contrast-color: #{$warning-contrast-color};
+  --danger-contrast-color: #{$danger-contrast-color};
+
+  --background-gradient-aquamarine: #{$background-gradient-aquamarine};
+  --background-gradient-soft-orange: #{$background-gradient-soft-orange};
+  --background-gradient-gentle-blue: #{$background-gradient-gentle-blue};
+  --background-gradient-muted-red: #{$background-gradient-muted-red};
+
   --background-color: #{$background-color};
   --text-color: #{$text-color};
   --text-color-light: #{$text-color-light};
