--- a/packages/theme/src/components/_tag.scss
+++ b/packages/theme/src/components/_tag.scss
@@ -18,11 +18,11 @@
     }
     &-danger {
       background: var(--danger-color);
-      color: var(--danger-constrast-color);
+      color: var(--danger-contrast-color);
     }
     &-info {
       background: var(--info-color);
-      color: var(--info-constrast-color);
+      color: var(--info-contrast-color);
     }
   }
   &-gradient {
